syntax = "proto3";

package cr8r.models;

message PExperiment {
    uint32 id = 1;
    string created_at = 2;
    PExperimentStatus status = 3;
}

message PExperimentStatus {
    message PIdle {
        string since = 1;
    }

    message PRunning {
        string since = 1;
        string last_heartbeat_at = 2;
        uint32 completed_jobs = 3;
        uint32 total_jobs = 4;
    }

    message PCompleted {
        string since = 1;
        bool success = 2;
        string cause = 3;
    }

    message PStopped {
        string since = 1;
    }

    oneof ty {
        PIdle idle = 1;
        PRunning running = 2;
        PCompleted completed = 3;
        PStopped stopped = 4;
    }
}
